[gd_scene load_steps=4 format=3 uid="uid://dxo86rrrk2vjx"]

[ext_resource type="Script" uid="uid://cwr8sr5rsy06" path="res://script/option_menu.gd" id="1_40sux"]
[ext_resource type="FontFile" uid="uid://cyve1ccpigpx0" path="res://assets/font/vendetta.ttf" id="1_hecwe"]

[sub_resource type="CanvasTexture" id="CanvasTexture_hecwe"]

[node name="Option_Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1258.0
offset_bottom = 708.0
script = ExtResource("1_40sux")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 1258.0
offset_bottom = 708.0
texture = SubResource("CanvasTexture_hecwe")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -216.0
offset_right = 139.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_hecwe")
theme_override_font_sizes/font_size = 60
text = "OPTIONS"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -74.0
offset_right = 93.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Change Name"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Character" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Character"
horizontal_alignment = 1

[node name="CharacterDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="Pet" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Pet"
horizontal_alignment = 1

[node name="PetDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="HostIP2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Host IP"
horizontal_alignment = 1

[node name="HostIP" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back
"
